[project]
name = "langsmith-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.12.30",
    "llama-index-embeddings-azure-openai>=0.3.2",
    "llama-index-llms-azure-openai>=0.3.2",
    "pydantic-settings>=2.8.1",
    "traceloop-sdk>=0.39.1",
]
